--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -26,7 +26,7 @@
     font-weight: 150;
     margin-top: 80px;
   }
-  .p1{
+  .pp1{
     align-items: center;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
